add language switch and markdown content

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.4",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.8.46",
     "gatsby-transformer-sharp": "^2.4.4",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
