--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bulma": "^0.8.1",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.3.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
