--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-remark-behead": "^0.0.3",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.3.39",
     "gatsby-source-filesystem": "^2.2.2",
