--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@contentful/rich-text-react-renderer": "^15.12.0",
     "next": "12.1.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
