--- a/package.json
+++ b/package.json
@@ -1,35 +1,26 @@
 {
-  "name": "carlosgm",
-  "private": true,
+  "name": "com.carlosgm",
+  "version": "1.0.0",
+  "main": "index.js",
+  "prettier": "@hugomods/prettier-config",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint:prettier": "prettier . --check",
+    "lint:prettier:fix": "prettier . -w",
+    "dev:tailwind": "npx @tailwindcss/cli -i themes/carlosgm/assets/css/main.css -o ./assets/css/output.css --watch",
+    "dev:hugo": "hugo server --buildDrafts",
+    "dev": "npm run dev:tailwind & npm run dev:hugo"
   },
-  "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.0",
-    "next": "12.1.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sharp": "^0.30.7"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
-    "postcss": "^8.4.5",
-    "prettier": "2.5.1",
-    "tailwindcss": "^3.0.17",
-    "typescript": "^4.6.3"
-  },
-  "lint-staged": {
-    "*.{js,jsx,css,md,ts,tsx}": "prettier --write"
+    "@hugomods/prettier-config": "^0.2.0",
+    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
